# sc-router

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_routing.py  tool_catalog_setup.py
sc_router/: __init__.py  __main__.py  adapter.py  agent.py  bridge.py  catalog.py  classifier.py  config.py  cost.py  decomposer.py  executor.py  features.py  health.py  patterns.py  predictor.py  profiles.py  router.py  tracing.py
sc_router/gateway/: __init__.py  app.py  handlers.py
sc_router/integrations/: __init__.py  langchain.py  mcp.py  openai.py
tests/: conftest.py  test_agent.py  test_benchmark.py  test_classification.py  test_classifier.py  test_config.py  test_decomposer.py  test_executor.py  test_features.py  test_gateway.py  test_health.py  test_integration.py  test_profiles.py  test_router.py  test_tracing.py
